<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selectFoodActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/foodSelect"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/foodFishCb"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/foodMenu1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:theme="@style/colored_CheckBox"/>

    <CheckBox
        android:id="@+id/foodChickenCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/foodMenu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodFishCb"
        android:theme="@style/colored_CheckBox"/>

    <CheckBox
        android:id="@+id/foodRoastedVeggiesCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/foodMenu3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodChickenCb"
        android:theme="@style/colored_CheckBox"/>

    <CheckBox
        android:id="@+id/foodGrilledSteakCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/foodMenu4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodRoastedVeggiesCb"
        app:layout_constraintVertical_bias="0.0"
        android:theme="@style/colored_CheckBox"/>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="288dp"
        android:layout_height="191dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/teaRbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drinkMenu1"
            android:onClick="onRadioButtonClicked"
            android:theme="@style/RadioButtonStyle"/>

        <RadioButton
            android:id="@+id/coffeeRbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drinkMenu2"
            android:onClick="onRadioButtonClicked"
            android:theme="@style/RadioButtonStyle"/>

        <RadioButton
            android:id="@+id/orangeJuiceRbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drinkMenu3"
            android:onClick="onRadioButtonClicked"
            android:theme="@style/RadioButtonStyle"/>

        <RadioButton
            android:id="@+id/appleJuiceRbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drinkMenu4"
            android:onClick="onRadioButtonClicked"
            android:theme="@style/RadioButtonStyle"/>
    </RadioGroup>

    <Button
        android:id="@+id/checkoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/checkoutBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:text="@string/drinkSelect"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>